# gradecalc

./: .editorconfig  .gitignore  LICENSE.txt  README.md  pyproject.toml
gradecalc/: __main__.py  grade.py
gradecalc/core/: __init__.py  assignment.py  category.py
tests/: test_assignment.py  test_category.py
