[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gradecalc"
version = "1.0.0"
description = "Compute grade for class using YAML files"
authors = ["Quinn Thibeault <quinn.thibeault96@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
attrs = "*"
pyyaml = "*"
schema = "*"

[tool.poetry.dev-dependencies]
black = "*"

