[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gradecalc"
version = "1.0.0"
license = "MIT"
readme = "README.md"
description = "Compute grade for class using YAML files"
authors = ["Quinn Thibeault <quinn.thibeault96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^20.3.0"
PyYAML = "^5.4.1"
schema = "^0.7.4"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"

[tool.black]
line-length = 100
